New changes to the interface after feedback received on March 24, 2024.

--- a/client/src/NavBar/NavBar.module.css
+++ b/client/src/NavBar/NavBar.module.css
@@ -18,6 +18,7 @@ ul.navBar {
     margin: 0;
     overflow: hidden;
     background-color: hsl(356,100%,69%);
+    box-shadow: 5px 5px 5px hsla(0, 0%, 0%, 0.1);
   }
 
 ul.navBar li {
