--- a/client/src/pages/teamPage.module.css
+++ b/client/src/pages/teamPage.module.css
@@ -1,8 +1,19 @@
 .teamContents{
-    margin-left:7vw;
-    margin-right:9vw;
-    padding:12px;
+    padding: 12px  calc(12px + 7vw) 12px calc(12px + 7vw);
+    max-width: 100%;
     font-family: 'Trebuchet MS', sans-serif;
     color:hsl(0,0%,30%);
     font-size: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    border-radius: 50px 0px 0px 0px; 
+    justify-content: space-around;
+    background-color: lightgray;
+}
+
+.teamsHolder{
+    width: 100%;
+    margin:0;
+    padding: 0;
+    background-image: linear-gradient(to right, hsl(356,100%,69%), hsl(33, 94%, 72%) );
 }
