--- a/client/src/MemberCard/MemberCard.css
+++ b/client/src/MemberCard/MemberCard.css
@@ -7,7 +7,7 @@
     text-align: center;
     max-width: 250px;
     display: inline-block;
-    background-color: grey;
+    background-color: 	hsl(21, 80%, 66%);
 }
 
 .card .cardImage{
@@ -20,12 +20,12 @@
 .card .cardTitle{
     font-family: 'Trebuchet MS', sans-serif;
     margin: 0;
-    color:hsl(0, 0%, 20%);
+    color:white;
 }
 
 .card .cardText{
     font-family: 'Trebuchet MS', sans-serif;
-    color:hsl(0, 0%, 30%);
+    color:white;
 }
 
 .card .cardButton{
