--- a/client/src/pages/contactPage.module.css
+++ b/client/src/pages/contactPage.module.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 .contactHolder{
     margin: 0px;
     height: 100vh;
@@ -9,7 +11,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;    
-    font-family: 'Trebuchet MS', sans-serif;
+    font-family: "Poppins", sans-serif;
     color: white;
     background-image: linear-gradient(to right,hsl(356,100%,69%), hsl(33, 94%, 72%) );
 }
