--- a/client/src/SideBar/SideBar.module.css
+++ b/client/src/SideBar/SideBar.module.css
@@ -8,6 +8,18 @@
     left:0;
 }
 
+.collapsible{
+
+}
+
+.collapseLogo {
+    display: inline-block;
+    text-align: center;
+    width: 50px;
+    height: auto;
+    padding: 10px;
+}
+
 @media screen and (max-width: 600px) {
     .sideMenu {
         position:static;
